--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,9 @@
       "src": "/(.*)",
       "dest": "index.js"
     }
-  ]
+  ],
+   "scripts": {
+    "build": "[ejs] build --output public"
+  }
+
 }
