--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,11 @@
     {
       "src": "index.js",
       "use": "@vercel/node"
+    },
+    {
+      "scripts": {
+        "build": "[my-framework] build --output public"
+      }
     }
   ],
   "routes": [
@@ -11,9 +16,6 @@
       "src": "/(.*)",
       "dest": "index.js"
     }
-  ],
-   "scripts": {
-    "build": "[ejs] build --output public"
-  }
+  ]
 
 }
